--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ install:
     - pip install -r requirements.txt
 script:
     - python src/manage.py test tickets
+    - coverage run src/manage.py test tickets
 after_success:
     - coveralls
