Coverage only for one app

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
     - pip install -r requirements.txt
 script:
     - python src/manage.py test tickets
-    - coverage run src/manage.py test tickets
+    - coverage run --source='.' src/manage.py test tickets
 after_success:
     - coveralls
